js/js.translator/testData/incremental/invalidation/gettersAndSettersInlining/lib1/l1.1.kt
open class Parent(open var objectName: String) {
    konst isValid = true
}
